--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="box">
-        <h1 id="title">Generator wypowiedzi Janusza Korwin-Mikke</h1>
+        <h1 id="title">Generator wypowiedzi Janusza Korwina-Mikkego</h1>
         <button id="btn">generuj wypowiedź</button>
         <div id="saying"></div>
     </div>
